Support 26.2 Dragon Death Beams Entity ID